--- a/templates/admin/partner/index.html.twig
+++ b/templates/admin/partner/index.html.twig
@@ -12,66 +12,70 @@
         </div>
 
         <div class="x_content">
-        <table class="table table-striped table-bordered jambo_table bulk_action">
-            <thead>
-            <tr class="headings">
-                <th style="width: 160px" class="text-center">Criado em</th>
-                <th>Nome</th>
-                <th>Slug</th>
-                <th>Tipo</th>
-                <th style="width: 100px" class="text-center">Status</th>
-                <th style="width: 180px" class="text-center">Ações</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for partner in partners %}
-                <tr>
-                    <td class="text-center">{{ partner.createdAt ? partner.createdAt|date('d/m/Y H:i') : '' }}</td>
-                    <td>{{ partner.name }}</td>
-                    <td>{{ partner.slug }}</td>
-                    <td>{{ partner.type }}</td>
-                    <td class="text-center">{{ partner.status ? 'Ativo' : 'Inativo' }}</td>
-                    <td class="text-center">
-                        <div class="btn-group" role="group" aria-label="...">
-                            <a class="btn btn-default btn-sm" title="Ver"
-                               href="{{ path('admin_partner_show', {'id': partner.id}) }}">
-                                <i class="fa fa-eye"></i> Ver
-                            </a>
-                            <a class="btn btn-warning btn-sm" title="Editar"
-                               href="{{ path('admin_partner_edit', {'id': partner.id}) }}">
-                                <i class="fa fa-edit"></i> Editar
-                            </a>
-                            {{ include('admin/partner/_delete_form.html.twig', {"gridButton": true}) }}
-                        </div>
-                    </td>
-                </tr>
-            {% else %}
-                <tr>
-                    <td colspan="10">Nenhum registro encontrado.</td>
-                </tr>
-            {% endfor %}
-            </tbody>
-        </table>
-        </div>
+            <div>
+                {{ form_start(form, {"method": "get", "attr": {"novalidate": "novalidate"}}) }}
+                <div class="col-md-3 form-group">
+                    {{ form_label(form.name) }}
+                    {{ form_widget(form.name, {"attr": {"class": "form-control"}}) }}
+                    {{ form_errors(form.name) }}
+                </div>
+                <div class="col-md-3 form-group">
+                    {{ form_label(form.type) }}
+                    {{ form_widget(form.type, {"attr": {"class": "form-control"}}) }}
+                    {{ form_errors(form.type) }}
+                </div>
+                <div class="col-md-2 form-group" style="margin-top: 26px">
+                    <button type="submit" class="btn btn-default">
+                        <i class="fa fa-search"></i> Consultar
+                    </button>
+                </div>
+            </div>
 
-        <nav class="text-center" aria-label="Page navigation">
-            <ul class="pagination">
-                <li>
-                    <a href="#" aria-label="Previous">
-                        <span aria-hidden="true">&laquo;</span>
-                    </a>
-                </li>
-                <li><a href="#">1</a></li>
-                <li><a href="#">2</a></li>
-                <li><a href="#">3</a></li>
-                <li><a href="#">4</a></li>
-                <li><a href="#">5</a></li>
-                <li>
-                    <a href="#" aria-label="Next">
-                        <span aria-hidden="true">&raquo;</span>
-                    </a>
-                </li>
-            </ul>
-        </nav>
+            <hr>
+            <table class="table table-striped table-bordered jambo_table bulk_action">
+                <thead>
+                <tr class="headings">
+                    <th style="width: 160px" class="text-center">Criado em</th>
+                    <th>Nome</th>
+                    <th>Slug</th>
+                    <th>Tipo</th>
+                    <th style="width: 100px" class="text-center">Status</th>
+                    <th style="width: 180px" class="text-center">Ações</th>
+                </tr>
+                </thead>
+                <tbody>
+                {% for partner in partners %}
+                    <tr>
+                        <td class="text-center">{{ partner.createdAt ? partner.createdAt|date('d/m/Y H:i') : '' }}</td>
+                        <td>{{ partner.name }}</td>
+                        <td>{{ partner.slug }}</td>
+                        <td>{{ partner.type == 'A' ? 'Apoiador' : 'Patrocinador' }}</td>
+                        <td class="text-center">{{ partner.status ? 'Ativo' : 'Inativo' }}</td>
+                        <td class="text-center">
+                            <div class="btn-group" role="group" aria-label="...">
+                                <a class="btn btn-default btn-sm" title="Ver"
+                                   href="{{ path('admin_partner_show', {'id': partner.id}) }}">
+                                    <i class="fa fa-eye"></i> Ver
+                                </a>
+                                <a class="btn btn-warning btn-sm" title="Editar"
+                                   href="{{ path('admin_partner_edit', {'id': partner.id}) }}">
+                                    <i class="fa fa-edit"></i> Editar
+                                </a>
+                                {{ include('admin/partner/_delete_form.html.twig', {"gridButton": true}) }}
+                            </div>
+                        </td>
+                    </tr>
+                {% else %}
+                    <tr>
+                        <td colspan="10">Nenhum registro encontrado.</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+
+            <div class="pagerfanta text-center">
+                {{ pagerfanta(pager, 'twitter_bootstrap3') }}
+            </div>
+        </div>
     </div>
 {% endblock %}
