--- a/templates/admin/videos/index.html.twig
+++ b/templates/admin/videos/index.html.twig
@@ -11,19 +11,18 @@
             <div class="clearfix"></div>
         </div>
         <div class="x_content">
-            <div>
-                {{ form_start(form, {"method": "get", "attr": {"novalidate": "novalidate"}}) }}
+            {{ form_start(form, {"method": "get", "attr": {"novalidate": "novalidate"}}) }}
+                {{ form_widget(form._token) }}
+
                 <div class="col-md-4 form-group">
                     {{ form_label(form.title) }}
                     {{ form_widget(form.title, {"attr": {"class": "form-control"}}) }}
                     {{ form_errors(form.title) }}
                 </div>
                 <div class="col-md-2 form-group" style="margin-top: 26px">
-                    <button type="submit" class="btn btn-default">
-                        <i class="fa fa-search"></i> Consultar
-                    </button>
+                    {{ form_widget(form.btn_consultar, {"attr": {"class": "btn btn-default"}}) }}
                 </div>
-            </div>
+            {{ form_end(form, {'render_rest': false}) }}
 
             <hr>
             <table class="table table-striped table-bordered jambo_table bulk_action">
